# pengbot-counter

./: README.md  setup.cfg  setup.py
example/: config_template.yaml
src/: penguin_counter_model.py  peocessor.py  processor.py
test/: test_counter.py
test/testdata/: AITCb2015a_0001.mat
