[metadata]
name = pengbot-counter
version = 0.0.4
long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    numpy==1.26.4
    pyyaml==6.0.1
    scipy==1.14.0
    tqdm==4.66.4
    pandas==2.2.2
    pillow==10.4.0
    torch==2.3.1
    torchvision==0.18.1

scripts =
    bin/count.py